padding fixed on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,8 @@ main {
         padding-bottom: 1rem;
     }
     
-    .container.mx-auto.px-4.py-8 {
+    .container.mx-auto {
+
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
     }
@@ -77,3 +78,6 @@ main {
         margin-top: 1rem;
     }
 }
+
+
+
